* (bug 6092) Add expensive parser functions {{REVISIONID:}}, {{REVISIONUSER:}}
  and {{REVISIONTIMESTAMP:}} (with friends).
* Add "wgRelevantUserName" to mw.config containing the current
  Skin::getRelevantUser value.
* (bug 56033) Add content model to the page information.
* Added Article::MissingArticleConditions hook to give extensions a chance to
  hide their (unrelated) log entries.
* Added $wgOpenSearchDefaultLimit defining the default number of entries to show
  on action=opensearch API call.
* For namespaces with $wgNamespaceProtection (including the MediaWiki
  namespace), the "protect" tab will be shown only if there are restriction
  levels available that would restrict editing beyond what
  $wgNamespaceProtection already applies. The protection form will offer only
  those protection levels.
* Added $wgAPIFormatModules, allowing extensions to add additional output
  formatting modules for the API.
* (bug 47812) The MediaWiki:Group-user.{css,js} pages can now be used to add
  custom CSS or JavaScript enabled only for registered users.
* (bug 52005) Special pages RecentChanges, RecentChangesLinked and Watchlist
  now include a legend describing the symbols used in lists of changes.
* Improved the accessibility of the tabs in Special:Preferences.
* Added ApiBeforeMain hook, roughly equivalent to the BeforeInitialize hook:
  it's called after everything is set up but before any major processing
  happens.

=== Bug fixes in 1.23 ===
* (bug 41759) The "updated since last visit" markers (on history pages, recent
  changes and watchlist) and the talk page message indicator are now correctly
  updated when the user is viewing old revisions of pages, instead of always
  acting as if the latest revision was being viewed.
* (bug 56443) Special:ConfirmEmail no longer shows a "Mail a confirmation code"
  when the email address is already confirmed. Also, consistently use
  "confirmed", rather than "authenticated", when messaging whether or not the